--- a/assets/index.html
+++ b/assets/index.html
@@ -22,7 +22,7 @@
 						<h1><a href="index.html">Spectral</a></h1>
 						<nav id="nav">
 							<ul>
-								<li class="special">
+								<li class="NAYELLI">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
